[tool.poetry]
name = "avax"
version = "0.1.0"
description = ""
authors = ["ZinchenkoNikolai <zinchenko@apptrix.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^6.4.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
